[gd_scene load_steps=3 format=3 uid="uid://bfdcnk6rti0b7"]

[ext_resource type="Script" path="res://scn/settings.gd" id="1_7ndvs"]
[ext_resource type="PackedScene" uid="uid://d2t84qikj0ovd" path="res://scn/inputmap/input_settings.tscn" id="2_fx4of"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_7ndvs")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -113.5
offset_bottom = 113.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="AspectRatioContainer"]
layout_mode = 2

[node name="SplitContainer2" type="SplitContainer" parent="AspectRatioContainer"]
layout_mode = 2
vertical = true

[node name="LineEdit" type="LineEdit" parent="AspectRatioContainer/SplitContainer2"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "user.ttv"
alignment = 1

[node name="SplitContainer" type="SplitContainer" parent="AspectRatioContainer/SplitContainer2"]
layout_mode = 2

[node name="BoxContainer2" type="BoxContainer" parent="AspectRatioContainer/SplitContainer2/SplitContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
vertical = true

[node name="Keybindings" type="Button" parent="AspectRatioContainer/SplitContainer2/SplitContainer/BoxContainer2"]
layout_mode = 2
text = "Keybindings"

[node name="MiniEditor" type="Button" parent="AspectRatioContainer/SplitContainer2/SplitContainer/BoxContainer2"]
layout_mode = 2
text = "MiniTuber Editor"

[node name="BoxContainer" type="BoxContainer" parent="AspectRatioContainer/SplitContainer2/SplitContainer"]
layout_mode = 2
vertical = true

[node name="Chalk" type="CheckButton" parent="AspectRatioContainer/SplitContainer2/SplitContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Chalk"

[node name="ColorPickerButton" type="ColorPickerButton" parent="AspectRatioContainer/SplitContainer2/SplitContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Chalk Color"

[node name="NoteBook" type="CheckButton" parent="AspectRatioContainer/SplitContainer2/SplitContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Notebook"

[node name="NotebookDir" type="Button" parent="AspectRatioContainer/SplitContainer2/SplitContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Startup Notebook"

[node name="MiniTuber" type="CheckButton" parent="AspectRatioContainer/SplitContainer2/SplitContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MiniTuber"

[node name="MiniTuberDir" type="Button" parent="AspectRatioContainer/SplitContainer2/SplitContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Startup Model"

[node name="InputSettings" parent="." instance=ExtResource("2_fx4of")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
offset_left = -490.0
offset_right = -490.0
size_flags_horizontal = 8

[node name="NoteDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 1
size = Vector2i(500, 500)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 1
root_subfolder = "notebooks"
use_native_dialog = true

[node name="MiniDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 1
size = Vector2i(500, 500)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 1
root_subfolder = "models"
use_native_dialog = true

[connection signal="text_submitted" from="AspectRatioContainer/SplitContainer2/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="AspectRatioContainer/SplitContainer2/SplitContainer/BoxContainer2/Keybindings" to="." method="_on_keybindings_pressed"]
[connection signal="pressed" from="AspectRatioContainer/SplitContainer2/SplitContainer/BoxContainer2/MiniEditor" to="." method="_on_mini_editor_pressed"]
[connection signal="toggled" from="AspectRatioContainer/SplitContainer2/SplitContainer/BoxContainer/Chalk" to="." method="_on_chalk_toggled"]
[connection signal="toggled" from="AspectRatioContainer/SplitContainer2/SplitContainer/BoxContainer/NoteBook" to="." method="_on_note_book_toggled"]
[connection signal="pressed" from="AspectRatioContainer/SplitContainer2/SplitContainer/BoxContainer/NotebookDir" to="." method="_on_notebook_dir_pressed"]
[connection signal="toggled" from="AspectRatioContainer/SplitContainer2/SplitContainer/BoxContainer/MiniTuber" to="." method="_on_mini_tuber_toggled"]
[connection signal="pressed" from="AspectRatioContainer/SplitContainer2/SplitContainer/BoxContainer/MiniTuberDir" to="." method="_on_mini_tuber_dir_pressed"]
[connection signal="dir_selected" from="NoteDialog" to="." method="_on_note_dialog_dir_selected"]
[connection signal="dir_selected" from="MiniDialog" to="." method="_on_mini_dialog_dir_selected"]
